--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [main, develop]
 
+# NOTE:
+# Legacy deploy jobs (DockerHub/Railway/Vercel) are disabled by default.
+# Enable by setting GitHub Repository Variables:
+# - ENABLE_LEGACY_DEPLOY=true
+# - (optional) ENABLE_RAILWAY_DEPLOY=true
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -176,7 +182,7 @@ jobs:
   deploy-api:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main' && secrets.DOCKER_USERNAME != '' && secrets.DOCKER_PASSWORD != ''
+    if: ${{ github.ref == 'refs/heads/main' && vars.ENABLE_LEGACY_DEPLOY == 'true' }}
     steps:
       - uses: actions/checkout@v4
 
@@ -195,7 +201,7 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/reetro-api:latest
 
       - name: Deploy to Railway
-        if: secrets.RAILWAY_TOKEN != ''
+        if: ${{ vars.ENABLE_RAILWAY_DEPLOY == 'true' }}
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
         run: |
@@ -206,7 +212,7 @@ jobs:
   deploy-web:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main' && secrets.VERCEL_TOKEN != '' && secrets.VERCEL_ORG_ID != '' && secrets.VERCEL_PROJECT_ID != ''
+    if: ${{ github.ref == 'refs/heads/main' && vars.ENABLE_LEGACY_DEPLOY == 'true' }}
     steps:
       - uses: actions/checkout@v4
 
