--- a/.env.production.example
+++ b/.env.production.example
@@ -36,7 +36,11 @@ WEB_PORT=3000
 
 # Replace with your actual domain
 FRONTEND_URL=https://yourdomain.com
-NEXT_PUBLIC_API_URL=https://api.yourdomain.com/api/v1
+# Base URL (do NOT include /api). Web app will call `${NEXT_PUBLIC_API_URL}/api/...`
+NEXT_PUBLIC_API_URL=https://api.yourdomain.com
+
+# Some parts of the API use WEB_URL for CORS. Keep both to avoid misconfig.
+WEB_URL=https://yourdomain.com
 
 # ===========================================
 # OAUTH - GOOGLE
