feat: set up deploy db

--- a/.env.production.example
+++ b/.env.production.example
@@ -7,10 +7,13 @@
 # ===========================================
 # DATABASE
 # ===========================================
-DB_USER=reetro_user
-DB_PASSWORD=<STRONG_PASSWORD_32_CHARS>
-DB_NAME=reetro_booking
-DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}
+DB_USER=root
+DB_PASSWORD=<DB_PASSWORD>
+DB_NAME=booking_barber_db
+# Dokploy internal host (example from your DB service)
+DB_HOST=bookingbarber-db-cszgfp
+DB_PORT=5432
+DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public
 
 # ===========================================
 # REDIS
