--- a/apps/zalo/package.json
+++ b/apps/zalo/package.json
@@ -8,8 +8,9 @@
     "start": "vite dev",
     "build": "tsc && vite build",
     "zmp:start": "zmp start",
-    "zmp:build": "zmp build",
-    "zmp:deploy": "zmp deploy",
+    "zmp:build": "vite build",
+    "zmp:deploy": "node deploy.cjs",
+    "zmp:deploy:dev": "node deploy.cjs --dev",
     "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
@@ -36,9 +37,16 @@
     "postcss": "^8.4.32",
     "typescript": "^5.3.2",
     "vite": "5",
-    "zmp-cli": "^1.0.0",
+    "zmp-cli": "^4.0.2",
     "zmp-sdk": "^2.30.0",
     "zmp-ui": "^1.11.12",
     "zmp-vite-plugin": "^1.1.6"
-  }
+  },
+  "browserslist": [
+    "Android >= 5",
+    "iOS >= 12",
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
