fix: update zalo app id and allow cors for zalo mini app

--- a/apps/zalo/app-config.json
+++ b/apps/zalo/app-config.json
@@ -2,7 +2,8 @@
   "template": "mini-store",
   "framework": "react",
   "app": {
-    "title": "ReetroBarberShop"
+    "title": "ReetroBarberShop",
+    "id": "2917748007370695388"
   },
   "pages": [
     {
